--- a/songs.html
+++ b/songs.html
@@ -46,8 +46,8 @@
 <body>
   <h1>เลือกเพลงที่ต้องการฟัง</h1>
   <div>
-    <button onclick="loadVideo('Jl2GVV5OYfY?si=LtBVP8ZinUWQJuhG')">ถ้าคิดถึงเธอมากกว่านี้</button>
-    <button onclick="loadVideo('kXYiU_JCYtU')">เพลงแมว</button>
+    <button onclick="loadVideo('LtBVP8ZinUWQJuhG')">ถ้าคิดถึงเธอมากกว่านี้ x Pimthitiii</button>
+    <button onclick="loadVideo('7Kpnda07tfo&ab')">หมากเกมนี้ - อินคา [Cover By สมอารมณ์ x Pimthitiii]</button>
     <button onclick="loadVideo('fRh_vgS2dFE')">เกมใหม่</button>
     <button onclick="loadVideo('3JZ_D3ELwOQ')">Shape of You</button>
     <button onclick="loadVideo('LsoLEjrDogU')">Faded</button>
