--- a/songs.html
+++ b/songs.html
@@ -46,11 +46,11 @@
 <body>
   <h1>เลือกเพลงที่ต้องการฟัง</h1>
   <div>
-    <button onclick="loadVideo('LtBVP8ZinUWQJuhG')">ถ้าคิดถึงเธอมากกว่านี้ x Pimthitiii</button>
-    <button onclick="loadVideo('7Kpnda07tfo&ab')">หมากเกมนี้ - อินคา [Cover By สมอารมณ์ x Pimthitiii]</button>
-    <button onclick="loadVideo('fRh_vgS2dFE')">เกมใหม่</button>
-    <button onclick="loadVideo('3JZ_D3ELwOQ')">Shape of You</button>
-    <button onclick="loadVideo('LsoLEjrDogU')">Faded</button>
+    <button onclick="loadVideo('Jl2GVV5OYfY')">ถ้าคิดถึงเธอมากกว่านี้ x Pimthitiii</button>
+    <button onclick="loadVideo('yqpmX4eOCHo')">หมากเกมนี้ - อินคา [Cover By สมอารมณ์ x Pimthitiii]</button>
+    <button onclick="loadVideo('HtsXPgf830k')">苏慕遮</button>
+    <button onclick="loadVideo('nNZ5C30d6EE')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก</button>
+    <button onclick="loadVideo('VRVFAHidHm8')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก(Rock) EP.2</button>
   </div>
   <iframe id="ytPlayer" src="" allowfullscreen></iframe>
 
