--- a/songs.html
+++ b/songs.html
@@ -53,7 +53,11 @@
     <button onclick="loadVideo('VRVFAHidHm8')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก(Rock) EP.2</button>
   </div>
   <iframe id="ytPlayer" src="" allowfullscreen></iframe>
-
+<a href="index.html">
+  <button style="background: linear-gradient(45deg, #ff6b6b, #ff4757); margin-top: 30px;">
+    🏠 กลับหน้าแรก
+  </button>
+</a>
   <script>
     function loadVideo(videoId) {
       const player = document.getElementById('ytPlayer');
