--- a/songs.html
+++ b/songs.html
@@ -5,112 +5,103 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>เลือกเพลง YouTube</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Sarabun&display=swap');
-
-    * {
-      box-sizing: border-box;
-    }
-
-    html, body {
-      margin: 0;
-      padding: 0;
+    body {
       font-family: 'Sarabun', sans-serif;
-      background: #121212;
+      background: linear-gradient(135deg, #1e1e1e, #121212);
       color: white;
-      height: 100%;
-      overflow-y: auto;
-    }
-
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url('bg.webp');
-      background-size: cover;
-      background-position: center;
-      filter: blur(6px) brightness(0.5);
-      z-index: -1;
-    }
-
-    .container {
-      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 20px;
+      justify-content: flex-start;
+      padding: 30px;
+      min-height: 100vh;
+      box-sizing: border-box;
     }
-
     h1 {
-      font-size: 1.8rem;
+      font-size: 2rem;
       margin-bottom: 20px;
-      text-shadow: 0 2px 6px rgba(0,0,0,0.5);
       text-align: center;
     }
-
     button {
       background: linear-gradient(45deg, #34ace0, #33d9b2);
       border: none;
       border-radius: 12px;
       padding: 12px 20px;
-      margin: 8px;
+      margin: 10px;
       color: white;
       font-size: 1rem;
       cursor: pointer;
       transition: background 0.3s;
-      width: 90vw;
-      max-width: 400px;
-      word-wrap: break-word;
     }
-
     button:hover {
       background: linear-gradient(45deg, #2c99cc, #28b999);
     }
-
     iframe {
-      margin-top: 20px;
-      width: 100%;
+      margin-top: 30px;
+      width: 90vw;
       max-width: 600px;
       height: 340px;
       border: none;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.6);
     }
 
-    .back-button {
-      background: linear-gradient(45deg, #ff6b6b, #ff4757);
-      margin-top: 30px;
+    .back-btn {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+    }
+    .back-btn img {
+      width: 50px;
     }
 
-    .back-button:hover {
-      background: linear-gradient(45deg, #e74c3c, #e84118);
+    .exit-fullscreen {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      z-index: 100;
+      padding: 10px 16px;
+      font-size: 1rem;
+      background: #ff5e57;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      cursor: pointer;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>เลือกเพลงที่ต้องการฟัง</h1>
-    <div>
-      <button onclick="loadVideo('Jl2GVV5OYfY')">ถ้าคิดถึงเธอมากกว่านี้ x Pimthitiii</button>
-      <button onclick="loadVideo('yqpmX4eOCHo')">หมากเกมนี้ - อินคา [Cover By สมอารมณ์ x Pimthitiii]</button>
-      <button onclick="loadVideo('HtsXPgf830k')">苏慕遮</button>
-      <button onclick="loadVideo('nNZ5C30d6EE')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก</button>
-      <button onclick="loadVideo('VRVFAHidHm8')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก(Rock) EP.2</button>
-    </div>
+  <h1>เลือกเพลงที่ต้องการฟัง</h1>
 
-    <iframe id="ytPlayer" src="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <button onclick="loadVideo('Jl2GVV5OYfY')">ถ้าคิดถึงเธอมากกว่านี้ x Pimthitiii</button>
+  <button onclick="loadVideo('yqpmX4eOCHo')">หมากเกมนี้ - อินคา [Cover By สมอารมณ์ x Pimthitiii]</button>
+  <button onclick="loadVideo('HtsXPgf830k')">苏慕遮</button>
+  <button onclick="loadVideo('nNZ5C30d6EE')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก</button>
+  <button onclick="loadVideo('VRVFAHidHm8')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก(Rock) EP.2</button>
 
-    <a href="index.html">
-      <button class="back-button">🏠 กลับหน้าแรก</button>
-    </a>
-  </div>
+  <iframe id="ytPlayer" src="" allowfullscreen allow="autoplay"></iframe>
+
+  <!-- ปุ่มกลับหน้า index -->
+  <button class="back-btn" onclick="window.location.href='index.html'">
+    <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="กลับ">
+  </button>
+
+  <!-- ปุ่มออกจาก fullscreen -->
+  <button class="exit-fullscreen" onclick="exitFullScreen()">⛶ ออกจากโหมดเต็มหน้าจอ</button>
 
   <script>
     function loadVideo(videoId) {
       const player = document.getElementById('ytPlayer');
-      player.src = `https://www.youtube.com/embed/${videoId}?autoplay=1&mute=1`;
+      player.src = `https://www.youtube.com/embed/${videoId}?autoplay=1`;
+    }
+
+    function exitFullScreen() {
+      if (document.fullscreenElement) {
+        document.exitFullscreen();
+      }
     }
   </script>
 </body>
