--- a/index.html
+++ b/index.html
@@ -1,62 +1,130 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>คำนวณเฉลี่ยออเดอร์</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>คำนวณเฉลี่ยออเดอร์ + ไปหน้าเพลง</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Sarabun&display=swap');
     body {
+      margin: 0; padding: 0;
       font-family: 'Sarabun', sans-serif;
-      background-color: #121212;
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
+      background-size: cover;
       color: white;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 40px;
+      min-height: 100vh;
+      padding: 40px 20px;
     }
     h1 {
-      font-size: 2rem;
+      font-size: 2.4rem;
       margin-bottom: 30px;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
     }
     input {
-      padding: 10px;
-      font-size: 1rem;
+      font-size: 1.1rem;
+      padding: 10px 12px;
       margin: 10px;
       border-radius: 8px;
       border: none;
+      width: 250px;
+      max-width: 90vw;
     }
     button {
-      padding: 10px 20px;
       background: linear-gradient(45deg, #34ace0, #33d9b2);
       border: none;
+      border-radius: 12px;
+      padding: 12px 24px;
+      margin: 15px 10px 10px 10px;
       color: white;
-      font-size: 1rem;
-      border-radius: 8px;
+      font-size: 1.2rem;
       cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      transition: background 0.3s ease;
     }
     button:hover {
       background: linear-gradient(45deg, #2c99cc, #28b999);
     }
+    #goSongs {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: transparent;
+      box-shadow: none;
+      padding: 0;
+      width: 60px;
+      height: 60px;
+    }
+    #goSongs img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      cursor: pointer;
+      filter: drop-shadow(1px 1px 2px black);
+      border-radius: 12px;
+      transition: transform 0.3s ease;
+    }
+    #goSongs img:hover {
+      transform: scale(1.1);
+    }
   </style>
 </head>
 <body>
+
   <h1>คำนวณเฉลี่ยออเดอร์ต่อวัน</h1>
-  <input type="number" id="orders" placeholder="จำนวนออเดอร์ทั้งหมด">
-  <input type="number" id="days" placeholder="จำนวนวัน">
-  <button onclick="calculate()">คำนวณ</button>
+
+  <input type="text" id="sku" placeholder="SKU (เช่น ABC123)" />
+  <input type="number" id="mu" placeholder="MU (เช่น 50)" />
+  <input type="number" id="orders" placeholder="จำนวนออเดอร์ทั้งหมด" />
+  <input type="number" id="days" placeholder="จำนวนวัน" />
+
+  <button onclick="calculate()">คำนวณเฉลี่ย</button>
+
+  <button id="goSongs" title="ไปหน้าเพลง" onclick="goToSongs()">
+    <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="เป็ด" />
+  </button>
 
   <script>
     function calculate() {
+      const sku = document.getElementById("sku").value.trim();
+      const mu = parseFloat(document.getElementById("mu").value);
       const orders = parseFloat(document.getElementById("orders").value);
       const days = parseFloat(document.getElementById("days").value);
 
-      if (!isNaN(orders) && !isNaN(days) && days > 0) {
-        const avg = (orders / days).toFixed(1);
-        window.location.href = `average.html?avg=${avg}`;
-      } else {
-        alert("กรุณากรอกข้อมูลให้ถูกต้อง");
+      if (!sku) {
+        alert("กรุณากรอก SKU");
+        return;
       }
+      if (isNaN(mu) || mu <= 0) {
+        alert("กรุณากรอก MU ให้ถูกต้อง");
+        return;
+      }
+      if (isNaN(orders) || orders < 0) {
+        alert("กรุณากรอกจำนวนออเดอร์");
+        return;
+      }
+      if (isNaN(days) || days <= 0) {
+        alert("กรุณากรอกจำนวนวันให้ถูกต้อง");
+        return;
+      }
+
+      const avg = (orders / days).toFixed(1);
+
+      // ส่งข้อมูลไป average.html พร้อม query params
+      const params = new URLSearchParams({
+        sku,
+        mu,
+        avg
+      });
+      window.location.href = `average.html?${params.toString()}`;
+    }
+
+    function goToSongs() {
+      window.location.href = "songs.html";
     }
   </script>
+
 </body>
 </html>
